force-app/main/default/objects/POD_Group__c/POD_Group__c.object-meta.xml
<CustomObject>
    <label>POD Group</label>
    <nameField>
        <displayFormat>GP - {000}</displayFormat>
        <label>POD Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POD Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>