force-app/main/default/objects/POD_Group__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POD Gov</fullName>
            </value>
            <value>
                <fullName>POD Regular</fullName>
            </value>
            <value>
                <fullName>POD Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>