force-app/main/default/objects/POD_Group__c/fields/Sub_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contract__c</fullName>
    <label>Sub Contract</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thermometer</fullName>
            </value>
            <value>
                <fullName>X Ray</fullName>
            </value>
            <value>
                <fullName>Trucks</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>PCs</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>